--- a/index.html
+++ b/index.html
@@ -458,13 +458,13 @@ body, #sidebar, #basemap-switcher {
 }
 .zwiedzone-check {
   position: absolute;
-  top: -8px;
+  bottom: -6px;
   right: -6px;
   z-index: 10;
 }
 .status-icon {
   position: absolute;
-  top: -8px;
+  bottom: -6px;
   right: -6px;
   z-index: 10;
 }
